--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -301,6 +301,8 @@ models:
         models:
           - stackbit_page_meta
         label: Seo
+      - name: ''
+        type: string
   blog_feed_section:
     type: object
     label: Blog Feed Section
