stackbit.yaml: updated by Schema Editor

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -313,6 +313,8 @@ models:
       - name: slug
         type: slug
         required: true
+        hidden: true
+        readOnly: true
   blog_feed_section:
     type: object
     label: Blog Feed Section
